Add JavaScript Basics Quiz section to js.html

--- a/js.html
+++ b/js.html
@@ -304,6 +304,26 @@ async function fetchUserData(userId) {
         </div>
     </div>
 
+    <section class="quiz">
+        <h3>🧠 JavaScript Basics Quiz</h3>
+        <form id="quizForm">
+        <p>1. Which keyword is used to declare a variable in JavaScript?</p>
+        <label><input type="radio" name="q1" value="1"> var</label><br>
+        <label><input type="radio" name="q1" value="2"> dim</label><br>
+        <label><input type="radio" name="q1" value="3"> declare</label><br>
+
+        <p>2. What will <code>typeof null</code> return?</p>
+        <label><input type="radio" name="q2" value="1"> "object"</label><br>
+        <label><input type="radio" name="q2" value="2"> "null"</label><br>
+        <label><input type="radio" name="q2" value="3"> "undefined"</label><br>
+
+        <p>3. Which of these is not a JavaScript data type?</p>
+        <label><input type="radio" name="q3" value="1"> number</label><br>
+        <label><input type="radio" name="q3" value="2"> string</label><br>
+        <label><input type="radio" name="q3" value="3"> character</label>
+        </form>
+    </section>
+
     <script>
         function toggleTheme() {
             document.body.classList.toggle('dark-mode');
