Change quiz section class to 'section'

--- a/js.html
+++ b/js.html
@@ -220,7 +220,7 @@ async function fetchUserData(userId) {
         </div>
     </main>
 
-    <section class="quiz" aria-labelledby="quiz-title">
+    <section class="section" aria-labelledby="quiz-title">
         <h3 id="quiz-title">🧠 JavaScript Basics Quiz</h3>
         <form id="quizForm" aria-describedby="quiz-help">
             <p id="quiz-help">Select one answer per question and click Submit to see your score.</p>
